# pcl-viewer

./: README.md
shared/: smusso_uber_homework.tgz
shared/src/: CMakeLists.txt  README.txt  notes_and_references.txt  ub_camera.cpp  ub_utils.cpp  ub_view.cpp  ub_view.h
snippets/: unpack.c
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  Makefile  README.txt  UberXYZ_RGB.cpp  cmake_install.cmake  customPCD.cpp  dumpPCD  my_viewer.cpp  pack_unpack.pcd  test.pcd  ub-view  ub_camera.cpp  ub_controls.cpp  ub_gui.cpp  ub_tests.cpp  ub_utils.cpp  ub_view.cpp  ub_view.h
