cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Cloud_Viewer)
find_package(PCL 1.7 REQUIRED COMPONENTS common io kdtree visualization search)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(dumpPCD ${SUBSYS_NAME} customPCD.cpp)
#add_executable(sams_viewer ${SUBSYS_NAME} my_viewer.cpp)
target_link_libraries(dumpPCD pcl_common pcl_io pcl_kdtree pcl_visualization pcl_search ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
